syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.bruno.orange.pixdesafio";
option java_outer_classname = "KeymanagerGrpc";
import "google/protobuf/timestamp.proto";

package br.com.bruno.orange.pixdesafio;

service KeymanagerRegistra{
    rpc criar(RegistraChavePixRequest) returns (RegistraChavePixResponse){}
}

service KeymanagerDeleta{
  rpc deletar(DeletaChavePixRequest) returns (DeletaChavePixResponse){}
}

service KeymanagerConsulta {
  rpc carrega(ConsultaChavePixRequest) returns (ConsultaChavePixResponse) {}
}

service KeymanagerLista{
  rpc lista(ListaChavePixRequest) returns (ListaChavePixResponse){}
}
message RegistraChavePixRequest{
   string clienteId = 1;
   TipoDaChave tipoDaChave = 2;
   string valorDaChave = 3;
   TipoDaConta tipoDaConta = 4;
}

message RegistraChavePixResponse{
    string clienteId = 1;
    string pixId = 2;
}

message DeletaChavePixResponse{
  string pixId = 1;
  string clienteId = 2;
}
message DeletaChavePixRequest{
  string pixId = 1;
  string clienteId = 2;
}

message ConsultaChavePixRequest{
  message FiltroPorPixId {
    string clienteId = 1;
    string pixId     = 2;
  }
  //pesquisa por um campo ou outro
  oneof filtro {
    FiltroPorPixId pixId  = 1;
    string chave          = 2;
  }
}

message ConsultaChavePixResponse{
  message ChavePix {

    message ContaInfo {
      TipoDaConta tipo     = 1;
      string instituicao   = 2; /** ITAU UNIBANCO */
      string nomeDoTitular = 3;
      string cpfDoTitular  = 4;
      string agencia       = 5;
      string numeroDaConta = 6;
    }

    TipoDaChave tipo        = 1;
    string chave            = 2;
    ContaInfo conta         = 3;
    google.protobuf.Timestamp criadaEm = 4;
  }

  string clienteId = 1;
  string pixId     = 2;
  ChavePix chave   = 3;
}

message ListaChavePixRequest{
  string clienteId = 1;
}

message ListaChavePixResponse{
 message ChavePix{
  string pixId = 1;
  string chave = 2;
  TipoDaChave tipoDaChave = 3;
  TipoDaConta tipoDaConta = 4;
  google.protobuf.Timestamp criadaEm = 5;
 }
  string clienteId         = 1;
  repeated ChavePix chaves = 2;
}

enum TipoDaChave{
    UNKNOWN_TIPO_CHAVE = 0;
    CPF = 1;
    CELULAR = 2;
    EMAIL = 3;
    ALEATORIA = 4;
}

enum TipoDaConta{
    UNKNOWN_TIPO_CONTA = 0;
    CONTA_CORRENTE = 1;
    CONTA_POUPANCA = 2;
}